--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlServer": "Server=localhost\\sqlexpress; Initial catalog=minimal_api; TrustServerCertificate=True; Encrypt=False; Integrated Security = True"
+  },
+  "Jwt": "minimal-api-alunos-iniciar_aplicação_teste"
 }
